--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-1" style="background-image: url(assets/images/etusivu-banner-2000x1140.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-1" style="background-image: url(assets/images/etusivu-banner-2000x1073.jpg);">
 
-    <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(77, 18, 115);"></div>
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(77, 18, 115);"></div>
 
     <div class="mbr-table-cell">
 
@@ -67,9 +67,9 @@
             <div class="row">
                 <div class="mbr-section col-md-10 col-md-offset-1 text-xs-center">
 
-                    <h1 class="mbr-section-title display-1">FULL SCREEN INTRO</h1>
-                    <p class="mbr-section-lead lead">Click any text to edit or style it. Click blue "Gear" icon in the top right corner to hide/show buttons, text, title and change the block background. <br> Click red "+" in the bottom right corner to add a new block. Use the top left menu to create new pages, sites and add extensions.</p>
-                    <div class="mbr-section-btn"><a class="btn btn-lg btn-primary" href="https://mobirise.com">DOWNLOAD FOR WINDOWS</a> <a class="btn btn-lg btn-white btn-white-outline" href="https://mobirise.com">DOWNLOAD FOR MAC</a></div>
+                    <h1 class="mbr-section-title display-1">Valomainos on tärkeä <br>tekijä luodessasi yrityskuvaasi</h1>
+                    <p class="mbr-section-lead lead"><span style="font-style: normal;"><br></span><br><span style="font-style: normal;">Markun Neon Oy on valomainoksia myyvä, huoltava ja asentava yritys. Toimialaamme kuuluu myös tarratekstien ja logojen valmistus ja teippaus. Toimintamme alkoi vuonna 1982. Nykyään edustamamme valomainokset valmistetaan pääosin Eestin kokeneimmassa valomainosyrityksessä Jaa Disain OÜ:ssä.&nbsp;Bio Rex neonvalot<br><br>Tarjoamme täyden palvelun tuotteisiimme liittyen suunnittelusta asennukseen ja huoltoon. Autamme asiakkaita löytämään juuri heidän tarpeisiinsa sopivimmat ratkaisut. Monen vuoden kokemus valomainosalalta ja tuotteidemme korkea laatu takaa asiakkaiden tyytyväisyyden.<br><br></span></p>
+                    <div class="mbr-section-btn"><a class="btn btn-lg btn-primary" href="https://mobirise.com">Ota yhteyttä meihin. Autamme mielellämme.</a> </div>
                 </div>
             </div>
         </div>
@@ -87,7 +87,6 @@
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
-  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
