--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="stylesheet" href="assets/theme/css/style-rtl.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
 </head>
-<body>
+<body class="rtl">
 <section id="menu-0">
 
     <nav class="navbar navbar-dropdown">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-1" style="background-image: url(assets/images/etusivu-banner-2000x1073.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-1" style="background-image: url(assets/images/etusivu-banner-2000x1073.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(77, 18, 115);"></div>
 
@@ -138,7 +138,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="TARJOUSPYYNTÖ">
 
-                        <input type="hidden" value="gUnL3h6RUFgQ2hc8iK5Pf/2M7xBOMrL4UzYstZlns6ZP4beklcMwD++O6FwwUDEaItYbMfAEKW06Z55EzkRBbeAIDcMfiJRsnNmkK0B2NALB+lyNrKb5j8d6m9EPkqRt" data-form-email="true">
+                        <input type="hidden" value="yT5Z81vRXd1uzR3h4cV16zEkRGJv7SZ8S3bIzU07HGFegUXeDMbTN8Sgm/AnBFzkxTNWbKK1pt6rXNIBPCYQdOJGztN7qPkr4upuFOu1o46qF7Oi59FXHP6OCXMHcemU" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -220,11 +220,9 @@ Fax: +1 (0) 000 0000 002</p>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
   
-  <input name="animation" type="hidden">
-  </body>
+</body>
 </html>
