--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/theme/css/style-rtl.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
 </head>
-<body class="rtl">
+<body>
 <section id="menu-0">
 
     <nav class="navbar navbar-dropdown">
@@ -44,7 +43,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="index.html#header1-1" aria-expanded="true" data-toggle="dropdown-submenu">TUOTTEET</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Pintaputkiset <br>neonvalomainokset<br></a><a class="dropdown-item" href="#">Akryylipintaiset<br>neonvalomainokset<br></a><a class="dropdown-item" href="#">Valomainoskotelot</a><a class="dropdown-item" href="#">Valomainospylonit</a><a class="dropdown-item" href="#">Nimikyltit</a><a class="dropdown-item" href="#">Julisteet / banderollit</a><a class="dropdown-item" href="#">Vinyylit / Teippaukset</a><a class="dropdown-item" href="#">Ajoneuvoteippaukset</a><a class="dropdown-item" href="#">Opastekyltit</a><a class="dropdown-item" href="#">Messutuotteet</a><a class="dropdown-item" href="#">Muut</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html#header1-1" aria-expanded="false">PALVELUT</a></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#msg-box5-5" aria-expanded="false">YRITYS</a></li><li class="nav-item"><a class="nav-link link" href="#bottom" aria-expanded="false">YHTEYSTIEDOT</a></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-4" aria-expanded="false">TARJOUSPYYNTÖ</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="index.html#header1-1" aria-expanded="true" data-toggle="dropdown-submenu">TUOTTEET</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Pintaputkiset<br>neonvalomainokset<br></a><a class="dropdown-item" href="#">Akryylipintaiset<br>neonvalomainokset<br></a><a class="dropdown-item" href="#">Valomainoskotelot</a><a class="dropdown-item" href="#">Valomainospylonit</a><a class="dropdown-item" href="#">Nimikyltit</a><a class="dropdown-item" href="#">Julisteet / banderollit</a><a class="dropdown-item" href="#">Vinyylit / Teippaukset</a><a class="dropdown-item" href="#">Ajoneuvoteippaukset</a><a class="dropdown-item" href="#">Opastekyltit</a><a class="dropdown-item" href="#">Messutuotteet</a><a class="dropdown-item" href="#">Muut</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html#header1-1" aria-expanded="false">PALVELUT</a></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#msg-box5-5" aria-expanded="false">YRITYS</a></li><li class="nav-item"><a class="nav-link link" href="#bottom" aria-expanded="false">YHTEYSTIEDOT</a></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-4" aria-expanded="false">TARJOUSPYYNTÖ</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-1" style="background-image: url(assets/images/etusivu-banner-2000x1073.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-1" style="background-image: url(assets/images/etusivu-banner-2000x1073.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(77, 18, 115);"></div>
 
@@ -138,7 +137,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="TARJOUSPYYNTÖ">
 
-                        <input type="hidden" value="yT5Z81vRXd1uzR3h4cV16zEkRGJv7SZ8S3bIzU07HGFegUXeDMbTN8Sgm/AnBFzkxTNWbKK1pt6rXNIBPCYQdOJGztN7qPkr4upuFOu1o46qF7Oi59FXHP6OCXMHcemU" data-form-email="true">
+                        <input type="hidden" value="i+QIOoGmebPUmtZlOut09gnhaOezTj0w8qkS8YvwL/EJcGs1HUiY7U+zQ3gvbw4tjJAIR1ZOOK67eR6+zNkLCHJm461uHP15EqtyCyrI0XlmI+Hg0yzgSeXKW9QB2iXQ" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
